<resources>
    <string name="app_name">cofffee</string>
    <string name="quantity">quantity</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="order">order</string>
    <string name="order_summary">order summary</string>
    <string name="value">$0</string>
    <string name="name">name</string>
    <string name="toppings">toppings</string>
    <string name="whipped_cream">whipping cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="one">1</string>
</resources>
