<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/cof"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/pad8">

            <EditText
                android:id="@+id/name_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/pad8"
                android:hint="@string/name"
                android:textColorHint="@android:color/white"
                android:textColor="@android:color/white"
                android:inputType="textCapWords" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad8"
                android:padding="@dimen/pad8"
                android:text="@string/toppings"
                android:textColor="@android:color/white"
                android:textAllCaps="true"
                android:textAppearance="?android:textAppearanceMedium" />

            <CheckBox
                android:id="@+id/whipped_cream_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad8"
                android:paddingLeft="@dimen/pad24"
                android:text="@string/whipped_cream"
                android:textColor="@android:color/white"
                android:textSize="@dimen/pad16"
                android:buttonTint="@android:color/white"/>

            <CheckBox
                android:id="@+id/chocolate_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/pad8"
                android:paddingLeft="@dimen/pad24"
                android:text="@string/chocolate"
                android:textColor="@android:color/white"
                android:textSize="@dimen/pad16"
                android:buttonTint="@android:color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad8"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad8"
                    android:onClick="decrement"
                    android:text="@string/minus"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad8"
                    android:text="@string/one"
                    android:textColor="@color/colo1"
                    android:textSize="@dimen/textsize" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/pad8"
                    android:onClick="increment"
                    android:text="@string/plus"
                    android:textStyle="bold" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad8"
                android:paddingTop="@dimen/pad8"
                android:text="@string/order_summary"
                android:textAllCaps="true"
                android:textColor="@android:color/white"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/pad8"
                android:text="@string/value"
                android:textColor="@android:color/white"
                android:textSize="@dimen/textsize" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/pad16"
                android:onClick="submitOrder"
                android:text="@string/order"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>
</ScrollView>
